--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,7 @@
 tasks:
-  - before: |
-      cd /workspaces
+  - init: |  
       git clone https://github.com/gbdev/rgbds.git
       cd https://github.com/gbdev/rgbds.git
-    init: |  
       make 
       sudo make install
       gp sync-done rgbds
