--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,7 @@ tasks:
   - init: |  
       git clone https://github.com/gbdev/rgbds.git
       cd rgbds
+      git checkout 9d993d84e85eeb8dd304e48463d89865795e97ed
       make 
       sudo make install
       gp sync-done rgbds
